--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # This is required for pushing to gh-pages
+      contents: write
     steps:
     - uses: actions/checkout@v2
       with:
         persist-credentials: true
+        fetch-depth: 0  # Important for clean deployment
     
     - name: Setup Node.js
       uses: actions/setup-node@v2
@@ -21,6 +22,14 @@ jobs:
         
     - name: Install Dependencies
       run: npm ci
+        
+    - name: Clean gh-pages branch
+      run: |
+        git checkout --orphan gh-pages-temp
+        git rm -rf .
+        git commit --allow-empty -m "Initial gh-pages commit"
+        git push origin gh-pages-temp:gh-pages --force
+        git checkout main
         
     - name: Deploy
       run: |
