--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,17 @@ jobs:
     - uses: actions/checkout@v2
       with:
         persist-credentials: true
-        fetch-depth: 0  # Important for clean deployment
+        fetch-depth: 0
     
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16'
+        
+    - name: Configure Git
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         
     - name: Install Dependencies
       run: npm ci
@@ -32,9 +37,6 @@ jobs:
         git checkout main
         
     - name: Deploy
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        npm run deploy
+      run: npm run deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
