--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         persist-credentials: true
-        fetch-depth: 0
     
     - name: Setup Node.js
       uses: actions/setup-node@v2
@@ -28,15 +27,10 @@ jobs:
     - name: Install Dependencies
       run: npm ci
         
-    - name: Clean gh-pages branch
-      run: |
-        git checkout --orphan gh-pages-temp
-        git rm -rf .
-        git commit --allow-empty -m "Initial gh-pages commit"
-        git push origin gh-pages-temp:gh-pages --force
-        git checkout main
-        
     - name: Deploy
-      run: npm run deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: .
+        force_orphan: true
