--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,23 +9,27 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        persist-credentials: true
+      pages: write
+      id-token: write
     
+    steps:
+    - uses: actions/checkout@v3
+      
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+        
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: '16'
         
-    - name: Configure Git
+    - name: Install Dependencies
+      run: npm ci
+        
+    - name: Build
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        
-    - name: Install Dependencies
-      run: npm ci
         
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
